Create frontend, add sorting controller in funtion index and change docker for frontend
